<resources>
    <string name="appName">Messager</string>

    <string name="welcomeDialogFoundIncompleteRegistrationHeader">Founded incomplete registration</string>
    <string name="welcomeDialogFoundIncompleteRegistrationBody">Continue register?</string>
    <string name="welcomeDialogFoundIncompleteRegistrationRestore">Continue</string>
    <string name="welcomeDialogFoundIncompleteRegistrationReset">Reset</string>
    <string name="welcomeHint">Note: if account is not registered, this data will be used for further registration\nEnter correct data if you already have an account</string>
    <string name="welcomeFinalRegisterHint">Registration is almost complete, check fields and click register button</string>
    <string name="welcomeLoginHint">Login</string>
    <string name="welcomePasswordHint">Password</string>
    <string name="welcomeEmailHint">Email</string>
    <string name="welcomeUsernameHint">Username</string>
    <string name="welcomeAuthButton">Auth</string>
    <string name="welcomeAuthButtonProcess">Authenticate...</string>
    <string name="welcomeRegister">Register</string>
    <string name="welcomeRegisterCancel">Cancel</string>
    <string name="welcomeForgotPassword">Forgot password?</string>
    <string name="error_welcome_account_login_are_exists">Account by login are exists</string>
    <string name="error_welcome_account_username_are_exists">Account by username are exists</string>
    <string name="error_welcome_account_login_not_found">Account by login not found</string>
    <string name="error_welcome_account_password_invalid">Password by login are invalid</string>

    <string name="update">Update</string>
    <string name="updateNewVersionFound">Detected new version: {version}, below included changelog</string>
    <string name="updateStartButton">Start update</string>
    <string name="error_update_item_by_product_not_found">Update by product not found</string>
    <string name="error_update_items_by_product_not_found">Updates by product not found</string>

    <string name="setEmail">Set email</string>
    <string name="setEmailHint">Fill field with email for continue registration</string>
    <string name="setEmailFieldHint">Email</string>
    <string name="setEmailButton">Send code to entered email</string>
    <string name="error_email_code_invalid">Code contains error or already deleted</string>

    <string name="confirmEmail">Email confirmation</string>
    <string name="confirmEmailHint">Fill field with code from your email (in same cases letter may be in spam)</string>
    <string name="confirmEmailFieldHint">Code</string>
    <string name="confirmEmailButton">Confirm</string>

    <string name="dialogs">Dialogs</string>
    <string name="dialogsFindUsersHint">Nobody writes? Try writing to anyone yourself!</string>
    <string name="dialogsFindUsersButton">Go to search</string>

    <string name="error_developer_eblan">If you found this error API has changed</string>
    <string name="error_field_no_match_regex">Field {field} not match: {condition}</string>
    <string name="error_field_invalid_length">Field {field} has incorrect length, need {length}</string>
    <string name="error_field_are_empty">Field {field} are empty</string>
    <string name="error_request_failed">Error on request executing</string>
    <string name="error_response_reading_failed">Error on response reading</string>
    <string name="error_internet_unavailable">No internet connection</string>
    <string name="error_internal">Internal error, written in log</string>

    <string name="regexHumanTranslationLDSS">letters + digits + special symbols</string>
    <string name="regexHumanTranslationSEM">standard email mask (me@domain.ltd)</string>

    <string name="service_pressAgainToExit">Press again to exit</string>
</resources>