<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogsActivity">

    <LinearLayout
        android:id="@+id/header"
        style="@style/Theme.Messager.Box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/defaultColor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headerText"
            style="@style/Theme.Messager.Text.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogs" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/findUsersBody"
        style="@style/Theme.Messager.Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/findUsersHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogsFindUsersHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/findUsers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/dialogsFindUsersButton"
            app:layout_constraintEnd_toEndOf="@+id/findUsersHint"
            app:layout_constraintStart_toStartOf="@+id/findUsersHint"
            app:layout_constraintTop_toBottomOf="@+id/findUsersHint" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>